@@ -29,7 +29,7 @@
 #define B3DSWAP(a,b,c) {c = (a); a = (b); b = c;}
 
 #define IMOD_MRC_STAMP 1146047817
-#define WRITE_SBYTES_DEFAULT 1
+#define WRITE_SBYTES_DEFAULT 0
 #define WRITE_SBYTES_ENV_VAR "WRITE_MODE0_SIGNED"
 #define READ_SBYTES_ENV_VAR "READ_MODE0_SIGNED"
 #define MRC_FLAGS_SBYTES  1
